<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginBottom="@dimen/margin_grand"
        android:src="@mipmap/ic_logo" />

    <EditText
        android:id="@+id/email"
        style="@style/AuthorizationEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        style="@style/AuthorizationEditText"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Button"
        android:text="@string/login" />

    <TextView
        android:id="@+id/registration_tv"
        style="@style/LightTextField"
        android:text="@string/registration" />

</LinearLayout>
